Closed Bug 965008 Opened 10 years ago Closed 10 years ago

Building xpcom/components fails with C4996 using VS2013

Categories

(Core :: XPCOM, defect)

x86_64
Windows 8.1
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla29

People

(Reporter: emk, Assigned: emk)

References

Details

Attachments

(1 file)

Because GetVersionEx is deprecated.

24:29.19 h:/m/mozilla-central/xpcom/components/ManifestParser.cpp(455) : error C
2220: 警告をエラーとして扱いました。'object' ファイルは生成されません。
24:29.19 Warning: C4996 in h:\m\mozilla-central\xpcom\components\ManifestParser.
cpp: 'GetVersionExA': が古い形式として宣言されました。
24:29.19 h:/m/mozilla-central/xpcom/components/ManifestParser.cpp(455) : warning
 C4996: 'GetVersionExA': が古い形式として宣言されました。
24:29.20         C:\Program Files (x86)\Windows Kits\8.1\include\um\sysinfoapi.h
(433) : 'GetVersionExA' の宣言を確認してください。
24:29.20 Native command 'mozbuild.action.cl main' returned value '2'
This GetVersionEx() usage is not easy to replace with VerifyVersionInfo().
Assignee: nobody → VYV03354
Status: NEW → ASSIGNED
Attachment #8366930 - Flags: review?(nfroyd)
Attachment #8366930 - Flags: review?(nfroyd) → review+
https://hg.mozilla.org/mozilla-central/rev/ebaa4b58e71c
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: