Bug 965008 - Suppress warning C4996 for VC12+. r=froydnj